# polaffini

./: .gitignore  LICENSE.md  README.md  __init__.py  environment_minimal.yaml  generators.py  pyproject.toml  requirements.txt  utils.py
dwarp/: __init__.py  augmentation.py  callbacks.py  generators.py  layers.py  losses.py  networks.py  polaffini_gpu.py  requirements.txt  utils.py
eddeep/: __init__.py  generators.py  networks.py
polaffini/: __init__.py  polaffini.py  polaffini_vox.py  requirements.txt  test_warp.py  utils.py
refs/: dkt_labels.csv
scripts/: apply_transfos.py  apply_xfm.py  init_polaffini.py  polaffini_example.py  polaffini_pair.py  polaffini_set2template  polaffini_set2template.py  register.py  register_diffeo_pair.py  register_diffeo_toTemplate.py  train.py  train_diffeo_pair.py  train_diffeo_pair_2.py  train_diffeo_toTemplate.py  train_eddeep_corr.py  train_eddeep_trans.py  train_pair.py
