[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polaffini"
authors = [
        {name = "AINOSTICS Ltd.", email = "info@ainostics.com"},
        {name = "Antoine Legouhy"},
        {name = "Ross Callaghan"}
]
readme = "README.md"
license = {file = "LICENSE.md"}
version = "0.0.1"
requires-python = ">=3.9"
dependencies = [
             "numpy==1.24.3",
             "scipy==1.12.0",
             "SimpleITK==2.3.1",
             "nibabel==5.2.0"
]
[project.urls]
Homepage = "https://ainostics.com"
Repository = "https://github.com/CIG-UCL/polaffini.git"

[project.optional-dependencies]
dwarp = [
      "matplotlib==3.7.2",
      "neurite==0.2",
      "pandas==2.0.3",
      "tensorflow[and-cuda]==2.15.1",
      "voxelmorph==0.2",
      "pydot==2.0.0"
]

[tool.setuptools]
packages = [
         "polaffini",
         "polaffini.scripts",
         "dwarp"
]

[tool.setuptools.package-dir]
polaffini = "polaffini"
"polaffini.scripts" = "scripts"
dwarp = "dwarp"

[project.scripts]
polaffini = "polaffini.scripts.polaffini_pair:polaffini_pair"
