[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polaffini"
authors = [
        {name = "AINOSTICS Ltd.", email = "info@ainostics.com"},
        {name = "Antoine Legouhy"},
        {name = "Ross Callaghan"}
]
readme = "README.md"
license = {file = "LICENSE.md"}
version = "0.0.1"
requires-python = ">=3.9"
dependencies = [
             "numpy==1.24.3",
             "scipy==1.12.0",
             "SimpleITK==2.3.1",
             "nibabel==5.2.0"
]
[project.urls]
Homepage = "https://ainostics.com"
Repository = "https://github.com/CIG-UCL/polaffini.git"

[tool.setuptools]
packages = [
         "polaffini",
         "polaffini.scripts"
]

[tool.setuptools.package-dir]
polaffini = "polaffini"
"polaffini.scripts" = "scripts"

[project.scripts]
polaffini = "polaffini.scripts.polaffini_pair:polaffini_pair"
